manuel_francisco/session-01/exercise-01/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: exercise-01
  labels:
    app: mariadb
    exercise: "01"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      # https://hub.docker.com/r/bitnami/mariadb/
      - name: mariadb
        image: bitnami/mariadb:latest
        ports:
        - name: mysql
          containerPort: 3306
