manuel_francisco/session-01/exercise-01/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: exercise-01
  labels:
    app: wordpress
    exercise: "01"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      # https://hub.docker.com/r/bitnami/wordpress/
      - name: wordpress
        image: bitnami/wordpress:latest
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
