manuel_francisco/session-01/exercise-01/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: exercise-01
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
  #- name: https
    #port: 443
    #targetPort: https
  selector:
    app: wordpress
